# smtpkit

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: codec.rs  echo.rs  framed.rs  rustyline.rs  test.txt
src/: codec.rs  lib.rs  parser.rs  tracing_stub.rs
src/parse/: helpers.rs  iterators.rs  mail.rs  mod.rs  parse_impl.rs  parser.rs  rcpt.rs  rfc5321.rs  tokens.rs
src/types/: mail.rs  mod.rs  rcpt.rs  serialize.rs
