[package]
name = "smtpkit"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bstr = { version = "1.0", default-features = false }
bytes = { version = "1.10", default-features = false }
itoa = "1.0.15"
tracing = { version = "0.1.41", default-features = false, features = ["attributes", "release_max_level_info"], optional = true }

# parse
bitflags = "2.9.1"
btoi = { version = "0.5.0", default-features = false, optional = true }
derive_more = { version = "2.0.1", features = ["as_ref", "display", "debug"] }
thiserror = { version = "2.0.12", optional = true, default-features = false }

# testing this out - would be nice to have ArcSlice<BStr>
[patch.crates-io]
bytes = { git = "https://github.com/wyfo/arc-slice.git" }

[features]
default = ["parse"]

std = ["bstr/std", "bytes/std", "thiserror?/std", "derive_more/std", "bitflags/std", "tracing?/std", "btoi?/std"]

tracing = ["dep:tracing"]

parse = ["dep:thiserror", "dep:btoi"]

unstable_doc = []

[dev-dependencies]
mutants = "0.0.3"
rstest = "0.25.0"
rustyline = "16.0.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

# cargo clippy --fix
[lints.clippy]
use_self = "warn"
doc_markdown = "warn"
unnecessary_semicolon = "warn"
must_use_candidate = "warn"
semicolon_if_nothing_returned = "warn"
wildcard_imports = "allow"
